2008-01-24  Neal H. Walfield  <neal@gnu.org>

	* as.h (as_slot_ensure_full): New declaration.
	(as_insert): Take additional parameters SOURCE_AS and TARGET_AS.
	* as.c (as_slot_ensure_full): Remove declaration.
	(as_slot_ensure): Update use of as_slot_ensure full to be
	consistent with the new API.
	(as_alloc_slow): Update use of rm_cap_copy to be consistent with
	new API.

2008-01-24  Neal H. Walfield  <neal@gnu.org>

	* as.c (as_slot_ensure): Update use of as_slot_ensure_full to be
	consistent with new API.
	(as_alloc_slow): Update use of rm_cap_copy to be consistent with
	new API.
	(as_init): Likewise.
	(as_walk): Likewise.

2008-01-24  Neal H. Walfield  <neal@gnu.org>

	* as.c (as_alloced_dump): Use s_printf rather than printf.
	(as_walk): Likewise.

2008-01-23  Neal H. Walfield  <neal@gnu.org>

	* Makefile.am (COMMON_CPPFLAGS): Add -I$(LIBC)/include.

2008-01-23  Neal H. Walfield  <neal@gnu.org>

	* capalloc.c (link): Rename from this...
	(list_link): ... to this.  Update users.
	(unlink): Rename from this...
	(list_unlink): ... to this.  Update users.
	* storage.c (link): Rename from this...
	(list_link): ... to this.  Update users.
	(unlink): Rename from this...
	(list_unlink): ... to this.  Update users.

2008-01-16  Neal H. Walfield  <neal@gnu.org>

	* storage.c (shadow_setup): Update rm_folio_object_alloc use to
	reflect API changes.
	(storage_alloc_): Likewise.
	(storage_free_): Likewise.

2008-01-14  Neal H. Walfield  <neal@gnu.org>

	* sbrk.c: New file.
	* Makefile.am (libhurd_mm_a_SOURCES): Add sbrk.c.

2008-01-12  Neal H. Walfield  <neal@gnu.org>

	* ia32-exception-entry.S (_exception_handler_end): Remove
	gratuitous lock prefix.

2008-01-02  Neal H. Walfield  <neal@gnu.org>

	* exceptions.c (exception_handler_activated): Move the debug
	statement after the call to utcb_state_save.

	* Makefile.am (COMMON_CPPFLAGS): Add -mpreferred-stack-boundary=2.
	Use -O2.

2008-01-02  Neal H. Walfield  <neal@gnu.org>
